--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "test_flutter_project",
-    "short_name": "test_flutter_project",
+    "name": "wwu_wash_and_dry",
+    "short_name": "wwu_wash_and_dry",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
